--- a/src/zh/posts/apple/1.md
+++ b/src/zh/posts/apple/1.md
@@ -11,10 +11,19 @@ tag:
 
 # 苹果 1
 
-## 标题 2
+## 残差连接与超连接
 
-这里是内容。
+$$S_l:X_l \rightarrow X_{l+1},$$
+假设其形式可为
+  $$\begin{align}
+    单纯嵌套：&x_{l+1}=F(x_l,W_l),\\
+    残差连接：&x_{l+1}=x_l+F(x_l,W_l),\\
+    超连接：&\begin{cases}
+        \tilde x_{l+1}=H^{res}_l  \tilde x_l+{{H_l^{post}}^T}F(H_l^{pre}  \tilde x_l,W_l),\\
+         \tilde x_0=E\circ x_0
+    \end{cases}
+\end{align}$$
 
-### 标题 3
-
-这里是内容。
+::: info Definition
+$$x_{l+1}=F(x_l,W_l)$$
+:::
